--- a/core/templates/home/articles_list.html
+++ b/core/templates/home/articles_list.html
@@ -94,7 +94,7 @@
         </div>
     </div>
 </section>
-{% endblock content %}+
+{% endblock content %}
 
 {% block script %}
 <script src="{% static 'js/articles_list.js' %}" defer></script>
